# kindred

./: .env.example  .gitignore  README.md  railway.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  migrate.yml
docs/: kindred-prd-dd.md  runbook-railway.md  setup.md
lib/: db.py  embeddings.py  pyproject.toml  requirements-dev.txt  settings.py
lib/services/: entries.py  patterns.py  tokens.py
lib/tests/: test_db.py  test_services_entries.py  test_services_patterns.py  test_services_tokens.py
mcp/: Dockerfile  audit.py  auth.py  db.py  embeddings.py  main.py  oauth.py  oauth_state.py  pyproject.toml  rate_limit.py  requirements.txt  settings.py
mcp/oauth/: __init__.py  routes.py  state.py  supabase.py
mcp/tests/: test_audit.py  test_auth.py  test_db.py  test_main.py  test_main_rate_limit.py  test_main_registration.py  test_oauth.py  test_oauth_authorize_token.py  test_oauth_callback.py  test_oauth_discovery.py  test_oauth_register.py  test_oauth_state.py  test_rate_limit.py  test_resources.py  test_settings.py  test_tools.py  test_verify_supabase_token.py
mcp/tools/: __init__.py  entries.py  patterns.py
prompts/: kindred-close.md  kindred-guide.md  kindred-hcb.md  kindred-start.md
requirements/: 001-mcp-server.md  002-entry-storage.md  003-semantic-search.md  004-pattern-tracking.md  005-mcp-prompts.md  006-mcp-oauth.md  007-web-app.md  008-google-oauth.md  009-account-settings.md  010-connector-setup.md  011-railway-deployment.md  012-retrospectives.md
scripts/: gates.sh
supabase/: config.toml
supabase/migrations/: 001_init.sql  002_service_role_audit.sql  (+1 more)
web/: Dockerfile  railway.toml
web/backend/: Dockerfile  auth.py  db.py  embeddings.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
web/backend/routes/: connect.py  entries.py  patterns.py  search.py  settings.py
web/backend/tests/: test_auth.py  test_db.py  test_routes.py
(+50 files in other folders)
