[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindred-lib"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.7",
    "pyjwt>=2.8",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[tool.setuptools]
packages = ["lib", "lib.services"]
package-dir = {"lib" = ".", "lib.services" = "services"}

[tool.setuptools.package-data]
lib = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["."]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".."]
testpaths = ["tests"]
